Import of MARCEL/Data-Storage-0.04 from CPAN.
gitpan-cpan-distribution: Data-Storage
gitpan-cpan-version:      0.04
gitpan-cpan-path:         MARCEL/Data-Storage-0.04.tar.gz
gitpan-cpan-author:       MARCEL
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -18,8 +18,11 @@ no_index:
     - inc
     - t
 requires: 
+  Class::Accessor::Complex: 0
+  Class::Accessor::Constructor: 0
   Class::Null: 0
   DBI: 0
   Data::Miscellany: 0
+  Error::Hierarchy: 0
   perl: 5.6.0
-version: 0.03
+version: 0.04
