--- a/META.yml
+++ b/META.yml
@@ -1,23 +1,25 @@
---- 
-abstract: ~
-author: 
-  - "{% ELSE %}"
-build_requires: 
+---
+abstract: 'generic abstract storage mechanism'
+author:
+  - 'Marcel GrE<uuml>nauer, C<< <marcel@cpan.org> >>'
+build_requires:
   Test::Compile: 0
-  Test::More: 0
-  UNIVERSAL::require: 0
+  Test::More: 0.70
 distribution_type: module
-generated_by: Module::Install version 0.68
+generated_by: 'Module::Install version 0.76'
 license: perl
-meta-spec: 
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: Data-Storage
-no_index: 
-  directory: 
+no_index:
+  directory:
     - inc
     - t
-requires: 
+recommends:
+  Test::Pod: 0
+  Test::Pod::Coverage: 0
+requires:
   Class::Accessor::Complex: 0
   Class::Accessor::Constructor: 0
   Class::Null: 0
@@ -25,4 +27,6 @@ requires:
   Data::Miscellany: 0
   Error::Hierarchy: 0
   perl: 5.6.0
-version: 0.07
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.08
