--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,14 @@
 ---
-abstract: 'generic abstract storage mechanism'
+abstract: 'Generic abstract storage mechanism'
 author:
   - 'Marcel GrE<uuml>nauer, C<< <marcel@cpan.org> >>'
 build_requires:
-  Test::Compile: 0
+  ExtUtils::MakeMaker: 6.42
   Test::More: 0.70
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.76'
+generated_by: 'Module::Install version 0.91'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,9 +18,7 @@ no_index:
   directory:
     - inc
     - t
-recommends:
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
+    - xt
 requires:
   Class::Accessor::Complex: 0
   Class::Accessor::Constructor: 0
@@ -28,5 +28,8 @@ requires:
   Error::Hierarchy: 0
   perl: 5.6.0
 resources:
+  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Data-Storage
+  homepage: http://search.cpan.org/dist/Data-Storage/
   license: http://dev.perl.org/licenses/
-version: 0.09
+  repository: git://github.com/hanekomu/data-storage.git
+version: 0.10
