--- a/META.yml
+++ b/META.yml
@@ -1,35 +1,89 @@
 ---
-abstract: 'Generic abstract storage mechanism'
+abstract: 'Base class for storages'
 author:
-  - 'Marcel GrE<uuml>nauer, C<< <marcel@cpan.org> >>'
-build_requires:
-  ExtUtils::MakeMaker: 6.42
-  Test::More: 0.70
+  - 'Marcel Gruenauer <marcel@cpan.org>'
+build_requires: {}
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
-distribution_type: module
-generated_by: 'Module::Install version 0.91'
+  ExtUtils::MakeMaker: 6.11
+generated_by: 'Dist::Zilla version 1.100711'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Data-Storage
-no_index:
-  directory:
-    - inc
-    - t
-    - xt
+provides:
+  Data::Storage:
+    file: lib/Data/Storage.pm
+    version: 1.100850
+  Data::Storage::DBI:
+    file: lib/Data/Storage/DBI.pm
+    version: 1.100850
+  Data::Storage::DBI::Mock:
+    file: lib/Data/Storage/DBI/Mock.pm
+    version: 1.100850
+  Data::Storage::DBI::Oracle:
+    file: lib/Data/Storage/DBI/Oracle.pm
+    version: 1.100850
+  Data::Storage::DBI::Postgres:
+    file: lib/Data/Storage/DBI/Postgres.pm
+    version: 1.100850
+  Data::Storage::DBI::Result:
+    file: lib/Data/Storage/DBI/Result.pm
+    version: 1.100850
+  Data::Storage::DBI::SQLite:
+    file: lib/Data/Storage/DBI/SQLite.pm
+    version: 1.100850
+  Data::Storage::DBI::Unrealized:
+    file: lib/Data/Storage/DBI/Unrealized.pm
+    version: 1.100850
+  Data::Storage::DBIC:
+    file: lib/Data/Storage/DBIC.pm
+    version: 1.100850
+  Data::Storage::Exception:
+    file: lib/Data/Storage/Exception.pm
+    version: 1.100850
+  Data::Storage::Exception::Connect:
+    file: lib/Data/Storage/Exception/Connect.pm
+    version: 1.100850
+  Data::Storage::Filesystem:
+    file: lib/Data/Storage/Filesystem.pm
+    version: 1.100850
+  Data::Storage::Filesystem::Record:
+    file: lib/Data/Storage/Filesystem/Record.pm
+    version: 1.100850
+  Data::Storage::Memory:
+    file: lib/Data/Storage/Memory.pm
+    version: 1.100850
+  Data::Storage::Mock:
+    file: lib/Data/Storage/Mock.pm
+    version: 1.100850
+  Data::Storage::Null:
+    file: lib/Data/Storage/Null.pm
+    version: 1.100850
+  Data::Storage::Statement:
+    file: lib/Data/Storage/Statement.pm
+    version: 1.100850
 requires:
+  Carp: 0
   Class::Accessor::Complex: 0
   Class::Accessor::Constructor: 0
   Class::Null: 0
   DBI: 0
   Data::Miscellany: 0
+  English: 0
+  Error: 0
   Error::Hierarchy: 0
-  perl: 5.6.0
+  Error::Hierarchy::Internal::DBI: 0
+  Error::Hierarchy::Util: 0
+  File::Find: 0
+  File::Temp: 0
+  Scalar::Util: 0
+  Test::More: 0.88
+  constant: 0
+  parent: 0
+  perl: 5.008
 resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Data-Storage
   homepage: http://search.cpan.org/dist/Data-Storage/
-  license: http://dev.perl.org/licenses/
-  repository: git://github.com/hanekomu/data-storage.git
-version: 0.11
+  repository: http://github.com/hanekomu/Data-Storage
+version: 1.100850
