--- a/META.yml
+++ b/META.yml
@@ -2,6 +2,7 @@
 abstract: 'Base class for storages'
 author:
   - 'Marcel Gruenauer <marcel@cpan.org>'
+  - 'Florian Helmberger <fh@univie.ac.at>'
 build_requires:
   Carp: 0
   English: 0
@@ -12,7 +13,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.31
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.101900, CPAN::Meta::Converter version 2.101670'
+generated_by: 'Dist::Zilla version 4.102340, CPAN::Meta::Converter version 2.102400'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,55 +22,55 @@ name: Data-Storage
 provides:
   Data::Storage:
     file: lib/Data/Storage.pm
-    version: 1.102250
+    version: 1.102520
   Data::Storage::DBI:
     file: lib/Data/Storage/DBI.pm
-    version: 1.102250
+    version: 1.102520
   Data::Storage::DBI::Mock:
     file: lib/Data/Storage/DBI/Mock.pm
-    version: 1.102250
+    version: 1.102520
   Data::Storage::DBI::Oracle:
     file: lib/Data/Storage/DBI/Oracle.pm
-    version: 1.102250
+    version: 1.102520
   Data::Storage::DBI::Pg:
     file: lib/Data/Storage/DBI/Pg.pm
-    version: 1.102250
+    version: 1.102520
   Data::Storage::DBI::Result:
     file: lib/Data/Storage/DBI/Result.pm
-    version: 1.102250
+    version: 1.102520
   Data::Storage::DBI::SQLite:
     file: lib/Data/Storage/DBI/SQLite.pm
-    version: 1.102250
+    version: 1.102520
   Data::Storage::DBI::Unrealized:
     file: lib/Data/Storage/DBI/Unrealized.pm
-    version: 1.102250
+    version: 1.102520
   Data::Storage::DBIC:
     file: lib/Data/Storage/DBIC.pm
-    version: 1.102250
+    version: 1.102520
   Data::Storage::Exception:
     file: lib/Data/Storage/Exception.pm
-    version: 1.102250
+    version: 1.102520
   Data::Storage::Exception::Connect:
     file: lib/Data/Storage/Exception/Connect.pm
-    version: 1.102250
+    version: 1.102520
   Data::Storage::Filesystem:
     file: lib/Data/Storage/Filesystem.pm
-    version: 1.102250
+    version: 1.102520
   Data::Storage::Filesystem::Record:
     file: lib/Data/Storage/Filesystem/Record.pm
-    version: 1.102250
+    version: 1.102520
   Data::Storage::Memory:
     file: lib/Data/Storage/Memory.pm
-    version: 1.102250
+    version: 1.102520
   Data::Storage::Mock:
     file: lib/Data/Storage/Mock.pm
-    version: 1.102250
+    version: 1.102520
   Data::Storage::Null:
     file: lib/Data/Storage/Null.pm
-    version: 1.102250
+    version: 1.102520
   Data::Storage::Statement:
     file: lib/Data/Storage/Statement.pm
-    version: 1.102250
+    version: 1.102520
 requires:
   Class::Accessor::Complex: 0
   Class::Accessor::Constructor: 0
@@ -87,4 +88,4 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Data-Storage
   homepage: http://search.cpan.org/dist/Data-Storage/
   repository: http://github.com/hanekomu/Data-Storage
-version: 1.102250
+version: 1.102520
